pbvic - heading, ul and ol tags

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 </head>
 
 <body>
-  <header> </hearder>
+  <header> Header </hearder>
 
  <section>
-   <article></article>
+   Section
+   <article>Article</article>
  </section>
 
- <aside></aside>
+ <aside>Aside</aside>
 
- <footer> </footer>a
+ <footer>footer</footer>
 </body>
 </html>
